--- a/mkdocs/theme/base.html
+++ b/mkdocs/theme/base.html
@@ -27,45 +27,18 @@
     <link href="{{ 'css/bootstrap.min.css'|url }}" rel="stylesheet">
     <link href="{{ 'css/font-awesome.min.css'|url }}" rel="stylesheet">
     <link href="{{ 'css/base.css'|url }}" rel="stylesheet">
-    {%- if config.theme.highlightjs %}
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{ config.theme.hljs_style }}.min.css">
-    {%- endif %}
     {%- for path in config['extra_css'] %}
     <link href="{{ path|url }}" rel="stylesheet">
     {%- endfor %}
     {%- endblock %}
 
     {%- block libs %}
-
     <script src="{{ 'js/jquery-3.6.0.min.js'|url }}" defer></script>
     <script src="{{ 'js/bootstrap.min.js'|url }}" defer></script>
-    {%- if config.theme.highlightjs %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    {%- for lang in config.theme.hljs_languages %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/{{lang}}.min.js"></script>
-    {%- endfor %}
+    <script src="{{ 'js/MathJax-2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML'|url }}"defer></script>
+    <script src="{{ 'js/highlight.min.js'|url }}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    {%- endif %}
     {%- endblock %}
-
-    {%- block analytics %}
-    {%- if config.google_analytics %}
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', '{{ config.google_analytics[0] }}', '{{ config.google_analytics[1] }}');
-        ga('send', 'pageview');
-    </script>
-    {%- endif %}
-    {%- endblock %}
-
-    {%- block extrahead %} {% endblock %}
 </head>
 
 <body{% if page and page.is_homepage %} class="homepage" {% endif %}>
@@ -205,9 +178,6 @@
 
     {% if 'search' in config['plugins'] %}{%- include "search-modal.html" %}{% endif %}
     {%- include "keyboard-modal.html" %}
-
-    <script src="https://cdn.jsdelivr.net/npm/@grame/faust-web-component@0.4.1/dist/faust-web-component.js"
-        defer></script>
     </body>
 
 </html>
